Level, Application en Window class geabstaheerd
De event handling wordt nu gedaan in de Application class en doorgestuurd naar de OnEvent methode van de Level classes die zijn toegevoegd aan de Application. Om de input te testen via de events heb ik de test Level class SpeedRacerLevel gemaakt.

Ook heb ik de Window class geabstraheerd en daarbij een default GameWindow class gemaakt om de specifieke functionaliteiten in te defineren.

--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClInclude Include="src\Core\Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Core.h">
+    <ClInclude Include="src\Core\Core.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\kmpch.h">
@@ -30,6 +30,9 @@
     <ClInclude Include="src\Core\Window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\GameWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Application.cpp">
@@ -38,7 +41,7 @@
     <ClCompile Include="src\kmpch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Core\Window.cpp">
+    <ClCompile Include="src\GameWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
