--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -21,13 +21,14 @@
   <ItemGroup>
     <ClInclude Include="src\Core\Application.h" />
     <ClInclude Include="src\Core\Level.h" />
-    <ClInclude Include="src\Core.h" />
+    <ClInclude Include="src\Core\Core.h" />
+    <ClInclude Include="src\GameWindow.h" />
     <ClInclude Include="src\kmpch.h" />
     <ClInclude Include="src\Core\Window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Application.cpp" />
-    <ClCompile Include="src\Core\Window.cpp" />
+    <ClCompile Include="src\GameWindow.cpp" />
     <ClCompile Include="src\kmpch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
