--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -24,12 +24,16 @@
     <ClInclude Include="src\KMCore\Core\Level.h" />
     <ClInclude Include="src\KMCore.h" />
     <ClInclude Include="src\Game\GameWindow.h" />
+    <ClInclude Include="src\KMCore\Core\Time.h" />
+    <ClInclude Include="src\KMCore\Entity\Enemy.h" />
+    <ClInclude Include="src\KMCore\Entity\Object.h" />
     <ClInclude Include="src\kmpch.h" />
     <ClInclude Include="src\KMCore\Core\Window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\KMCore\Core\Application.cpp" />
     <ClCompile Include="src\Game\GameWindow.cpp" />
+    <ClCompile Include="src\KMCore\Core\Time.cpp" />
     <ClCompile Include="src\kmpch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
