--- a/Kernmodule-Game/Kernmodule-Game.vcxproj.filters
+++ b/Kernmodule-Game/Kernmodule-Game.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClInclude Include="src\SpeedRacerLevel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Entities\Enemy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Entities\Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
