--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -19,13 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\KMCoreUtilities.h" />
+    <ClInclude Include="src\KMCore\Components\TransformComponent.h" />
     <ClInclude Include="src\KMCore\Core\Application.h" />
     <ClInclude Include="src\KMCore\Core\Core.h" />
     <ClInclude Include="src\KMCore\Core\Level.h" />
     <ClInclude Include="src\KMCore.h" />
     <ClInclude Include="src\Game\GameWindow.h" />
     <ClInclude Include="src\KMCore\Core\Time.h" />
+    <ClInclude Include="src\KMCore\UI\UIText.h" />
+    <ClInclude Include="src\KMCore\Entity\GameObject.h" />
     <ClInclude Include="src\KMCore\Entity\Object.h" />
+    <ClInclude Include="src\KMCore\Math\KMMathf.h" />
     <ClInclude Include="src\kmpch.h" />
     <ClInclude Include="src\KMCore\Core\Window.h" />
   </ItemGroup>
@@ -33,6 +38,7 @@
     <ClCompile Include="src\KMCore\Core\Application.cpp" />
     <ClCompile Include="src\Game\GameWindow.cpp" />
     <ClCompile Include="src\KMCore\Core\Time.cpp" />
+    <ClCompile Include="src\KMCore\Math\KMMathf.cpp" />
     <ClCompile Include="src\kmpch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
