--- a/Kernmodule-Game/Kernmodule-Game.vcxproj.filters
+++ b/Kernmodule-Game/Kernmodule-Game.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClCompile Include="src\SpeedRacerLevel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Entities\Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Entities\Enemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\SpeedRacerLevel.h">
