Component base class gemaakt/ Rigidbody component gemaakt/ Resizing van de window gemaakt/ Sprite class gemaakt/ Sprite size bug opgelost/ UI toegevoegd/ Player en enemies aangepast naar rigidbody

--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="src\KMCoreUtilities.h" />
     <ClInclude Include="src\KMCore\Components\ColliderComponent.h" />
+    <ClInclude Include="src\KMCore\Components\Component.h" />
     <ClInclude Include="src\KMCore\Components\RigidBodyComponent.h" />
     <ClInclude Include="src\KMCore\Components\TransformComponent.h" />
     <ClInclude Include="src\KMCore\Core\Application.h" />
@@ -30,6 +31,7 @@
     <ClInclude Include="src\Game\GameWindow.h" />
     <ClInclude Include="src\KMCore\Core\Primitives.h" />
     <ClInclude Include="src\KMCore\Core\Time.h" />
+    <ClInclude Include="src\KMCore\Entity\Sprite.h" />
     <ClInclude Include="src\KMCore\UI\UIText.h" />
     <ClInclude Include="src\KMCore\Entity\GameObject.h" />
     <ClInclude Include="src\KMCore\Entity\Object.h" />
@@ -41,6 +43,7 @@
     <ClCompile Include="src\KMCore\Core\Application.cpp" />
     <ClCompile Include="src\Game\GameWindow.cpp" />
     <ClCompile Include="src\KMCore\Entity\GameObject.cpp" />
+    <ClCompile Include="src\KMCore\Entity\Sprite.cpp" />
     <ClCompile Include="src\KMCore\Math\KMMathf.cpp" />
     <ClCompile Include="src\kmpch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
