--- a/Kernmodule-Game/Kernmodule-Game.vcxproj.filters
+++ b/Kernmodule-Game/Kernmodule-Game.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\SpeedRacerLevel.cpp">
+    <ClCompile Include="src\Levels\SpeedRacerLevel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Entities\Player.cpp">
@@ -27,15 +27,27 @@
     <ClCompile Include="src\Entities\Enemy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Entities\Road.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Levels\MainMenuLevel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\SpeedRacerLevel.h">
+    <ClInclude Include="src\Levels\SpeedRacerLevel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Entities\Enemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Entities\Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Entities\Road.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Levels\MainMenuLevel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
