Cleanup/ Release version bug opgelost

--- a/Kernmodule-Game/Kernmodule-Game.vcxproj
+++ b/Kernmodule-Game/Kernmodule-Game.vcxproj
@@ -142,7 +142,7 @@
       <ConformanceMode>Default</ConformanceMode>
       <AdditionalIncludeDirectories>..\Core\src;..\Core\vendor\SFML\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <LanguageStandard>Default</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <Optimization>Full</Optimization>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
